force-app/main/default/objects/Case_Management_Queue__c/Case_Management_Queue__c.object-meta.xml
<CustomObject>
    <description>Created to store Case management Queue Values for NPS project</description>
    <label>Case Management Queue</label>
    <nameField>
        <label>Case Management Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Management Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>