force-app/main/default/objects/Case_Management_Queue__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Defining Country Queue</description>
    <label>Country</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>