force-app/main/default/objects/Case_Management_Queue__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Defining Segment Queue</description>
    <label>Segment</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>