force-app/main/default/objects/Case_Management_Queue__c/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <description>Defining Sub Segment Queue</description>
    <label>Sub Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>