force-app/main/default/objects/Case_Management_Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Segment__c</columns>
    <columns>Sub_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>